# d2l_study

./: .gitignore  d2l_study.code-workspace  pyproject.toml  pyrightconfig.json  readme.md
notebooks/: test_code.py  test_env.py  week_1.ipynb
notebooks/chapter_1_3/: ndarray.ipynb  softmax.ipynb
notebooks/chapter_4/: MLP.ipynb  kaggle.ipynb  overfitting.ipynb
notebooks/chapter_preliminary/: ndarray.ipynb
notes/MLP/: epoch_as_hyperparameter.md  mlp_parameter_tune.md  mlp_theory.md
notes/foward_vs_backward_auto_diff/: readme.md
notes/generalized_linear_model/: note.md
notes/matrix_calculus/: readme.md  对称矩阵的求导，以多元正态分布的极大似然估计为例（矩阵求导——补充篇） - 知乎.mhtml  矩阵求导公式的数学推导（矩阵求导——基础篇） - 知乎.mhtml  矩阵求导公式的数学推导（矩阵求导——进阶篇） - 知乎.mhtml  矩阵求导的本质与分子布局、分母布局的本质（矩阵求导——本质篇） - 知乎.mhtml
notes/torch_auto_diff/: note.md
src/d2l/: README.md  pyproject.toml  torch.py
src/d2l/src/d2l/: __init__.py  d2l.py
src/d2l_raw/: torch.py
uv_env/: pyproject.toml  readme.md
