[project]
name = "d2l-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "d2l",
    "ipykernel>=7.1.0",
    "ipython>=8.38.0",
    "matplotlib>=3.10.8",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "requests>=2.32.5",
    "rich>=14.3.1",
    "scipy>=1.15.3",
    "structlog>=25.5.0",
    "torch==2.2.2",
    "torchvision>=0.17.2",
]

[tool.uv]
python-preference = "managed"
package = false

[tool.uv.sources]
d2l = { path = "../src/d2l", editable = true }
