[project]
name = "d2l"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lunyangh", email = "lunyangh@mac.local" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
